--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,21 +15,21 @@ services:
     image: mysql
     restart: always
     environment:
-      MYSQL_USER: "USER"
+      MYSQL_USER: ${MYSQL_USER}
       # You can use whatever password you like
-      MYSQL_PASSWORD: "PASSWORD"
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       # Password for root access
-      MYSQL_ROOT_PASSWORD: "PASSWORD"
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_ROOT_HOST: '%'
     networks:
       mynet:
-        ipv4_address: 10.5.0.10
+        ipv4_address: ${IP_V4_ADDR}
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
+      - ${PORT}:3306
     expose:
       # Opens port 3306 on the container
-      - '3306'
+      - ${PORT}
     # Where our data will be persisted
     volumes:
       - ./mysql_db:/var/lib/mysql
